Refactor update to one transaction, add delete items for old approvals